
EXTRA_DIST = \
	README \
	prcs-clean \
	merge-command \
	prcs-emerge \
	prcs-ediff \
	diff-command \
	prcs-callback \
	prcs-javadoc \
	prcs-javadoc.8 \
	dos2unixdiff3 \
	prcs-synch \
	rprcs.tar.gz \
	pfe.tar.gz \
	visualtree.tar.gz \
	prcsutils.tar.gz \
	pck.tar.gz \
	bash-completion

bin_SCRIPTS = prcs-callback prcs-emerge prcs-ediff
