lisp_LISP=prcs.el prcs-ediff.el prcs-hooks.el

# Seems not to distribute $(bin_SCRIPTS)!
# .elc files not distributed
EXTRA_DIST=prcs.el prcs-ediff.el prcs-hooks.el 1.60.log TODO prcs-el-todo.txt $(bin_SCRIPTS) $(man_MANS)

bin_SCRIPTS = prcs-callback prcs-emerge prcs-ediff

man_MANS = prcs-callback.1 prcs-emerge.1 prcs-ediff.1
