
noinst_HEADERS = quick.h rebuild.h repository.h \
        setkeys.h sexp.h syscmd.h system.h \
        typedefs.h utils.h vc.h checkin.h \
        checkout.h convert.h diff.h \
        fileent.h lock.h memseg.h misc.h \
        populate.h prcs.h prcsdir.h \
        prcserror.h projdesc.h dstring.h \
        dynarray.h getopt.h \
        fnmatch.h global.h md5.h maketime.h \
        partime.h hash.h docs.h regex2.h \
	be-strstream.h
